@@ -96,3 +96,9 @@ Now plugin supports custom post type. I.e. With this plugin, you can able to sen
 ********************************Version 2.6************************************************************
 
 Added new option in the Email Import page to select Email Status and Email Group. with this option you can select (or create) group name and emails status when you import the email address.
+
+********************************Version 2.7************************************************************
+
+Up to plugin version 2.6 only administrator level users can manage this plugin in dashboard. From this version I have introduced new feature called Roles. 
+The user role can be selected using this Roles Menu. For example, If you want to give Send Email feature to Editor. Go to plugin Roles menu 
+using administrator login and select Editor role to Send Email Menu, So that your Editor level user can access plugin Send Email menu to publish newsletter emails.
